--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 html {
-  scroll-behavior: auto !important;
+  scroll-behavior: smooth !important;
 }
 
 * {
@@ -29,10 +29,11 @@ header #carouselExampleControls {
   min-height: 100vh;
 }
 
-main {
+body {
   background-color: black;
   color: white;
-  width: 100%;
+  height: 100vh;
+  width: 100vw;
 }
 
 .card-body {
@@ -58,4 +59,8 @@ button {
 .fa-3x {
   margin: 0 0.3em;
   color: white !important;
+}
+
+footer {
+  height: 6.25rem;
 }
